--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.15.2",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
