feat(auth): implement JWT authentication with refresh tokens
- Replace cookie-based auth with JWT tokens for improved security
- Add refresh token support with automatic rotation
- Create new token management utilities in lib/jwt.ts
- Update auth API routes to use new token system
- Modify user model to store refresh tokens
- Implement token verification middleware for protected routes
- Update axios interceptor to handle token refresh
- Add comprehensive type definitions for NextAuth with tokens
- Remove deprecated auth routes and consolidate under (public)/(private) structure
- Implement proper logout functionality that invalidates tokens

The changes introduce a more secure authentication system using short-lived access tokens and longer-lived refresh tokens. This provides better security while maintaining good user experience. The system automatically handles token refresh when access tokens expire.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
@@ -24,6 +25,7 @@
     "dotenv": "^16.5.0",
     "framer-motion": "^12.18.1",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.515.0",
     "mongoose": "^8.15.2",
     "next": "15.3.3",
@@ -36,17 +38,20 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
+    "yet-another-react-lightbox": "^3.23.3",
     "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.1",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^19",
