--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "@types/xlsx": "^0.0.35",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
