--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.515.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.15.2",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
